# SEIR-Markov-lockdown

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/simple/: cities.csv  city_groups.csv  config.yaml  connections.csv  people.csv
examples/template/: city_groups.csv  config.yaml  people.csv  snapshot_config.yaml
examples/tokyo/: plot.py  snapshot.py
examples/tokyo/a=0.0,p_infection=0.01,lockdown_regulation=1.0/: city_groups.csv  people.csv
examples/tokyo/a=0.0,p_infection=0.3,lockdown_regulation=0.1/: people.csv
examples/tokyo/a=0.0,p_infection=0.5,lockdown_regulation=0.1/: people.csv
examples/tokyo/a=0.0,p_infection=0.7,lockdown_regulation=0.1/: people.csv
examples/tokyo/a=0.5,p_infection=0.01,lockdown_regulation=0.01/: city_groups.csv  snapshot_config.yaml
examples/tokyo/a=0.5,p_infection=0.01,lockdown_regulation=0.1/: people.csv
examples/tokyo/a=0.5,p_infection=0.01,lockdown_regulation=1.0/: connections.csv
examples/tokyo/a=0.5,p_infection=0.3,lockdown_regulation=0.3/: people.csv
examples/tokyo/a=0.5,p_infection=0.3,lockdown_regulation=0.5/: city_groups.csv
examples/tokyo/a=0.5,p_infection=0.5,lockdown_regulation=0.1/: snapshot_config.yaml
examples/tokyo/a=0.5,p_infection=0.5,lockdown_regulation=0.3/: cities.csv  people.csv
examples/tokyo/a=0.5,p_infection=0.7,lockdown_regulation=0.3/: people.csv
examples/tokyo/a=1.0,p_infection=0.01,lockdown_regulation=1.0/: people.csv
examples/tokyo/a=1.0,p_infection=0.3,lockdown_regulation=0.5/: people.csv
examples/tokyo/a=1.0,p_infection=0.5,lockdown_regulation=0.5/: people.csv
seir_markov_lockdown/: __init__.py  __main__.py  city.py  person.py  world.py
seir_markov_lockdown/app/: __init__.py  config.py  load.py  plot.py  snapshot.py  utils.py
(+3 files in other folders)
