[tool.poetry]
name = "seir-markov-lockdown"
version = "0.2.2"
description = ""
authors = ["Yunhyeon Jeong <jjj999to@gmail.com>"]
readme = "README.md"
packages = [{include = "seir_markov_lockdown"}]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.0"
pyyaml = "^6.0.1"
pydantic = "^2.7.1"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
pytest = "^8.2.0"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
japanize-matplotlib = "^1.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
